work/62/Chain_Java/compile_stderr.txt
Main.java:7: error: ';' expected
		double x = 2.0
		              ^
1 error
